--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,13 @@ dependencies {
 
     implementation 'com.lorentzos.swipecards:library:1.0.9'
 
-    implementation 'com.google.firebase:firebase-analytics:17.4.1'
+    implementation 'com.google.firebase:firebase-analytics:17.4.2'
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'androidx.cardview:cardview:1.0.0'
 
+    implementation 'com.airbnb.android:lottie:3.4.0'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
