--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    viewBinding {
+        enabled = true
+    }
 
 }
 
@@ -40,6 +43,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
     implementation 'com.android.support:recyclerview-v7:29.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
     implementation 'com.squareup.picasso:picasso:2.71828'
